--- a/src/ContactBeesender.Web/Properties/launchSettings.json
+++ b/src/ContactBeesender.Web/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:64927",
-      "sslPort": 44357
+      "applicationUrl": "http://localhost:51481",
+      "sslPort": 44394
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WebApplicationContactBeesender": {
+    "ContactBeesender.Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
