feat: add N-layer arhitecture

--- a/src/ContactBeesender.Web/appsettings.json
+++ b/src/ContactBeesender.Web/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionStrings": {
+      "ContactBeesenderConnection": "Server=(localdb)\\mssqllocaldb;Database=ContactBeesender;Trusted_Connection=True;"
     }
   },
   "AllowedHosts": "*"
