feat: Add user identity page

--- a/src/ContactBeesender.Web/ContactBeesender.Web.csproj
+++ b/src/ContactBeesender.Web/ContactBeesender.Web.csproj
@@ -9,11 +9,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ContactBeesender.BLL\ContactBeesender.BLL.csproj" />
     <ProjectReference Include="..\ContactBeesender.Common\ContactBeesender.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
